--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site setting
 title: Welcome to Erudito Theme Demo
-baseurl: /wpzoom
+baseurl: /eshop
 description: I’m <strong>Bennet Freeman</strong> and I love fashion, food, technology, but most of all life. Here in this <em>blog</em>, I always make sure that I create valuable content that attracts attention and drives traffic <a href="https://jeriljose.github.io/wpzoom/about/">... Read more »</a>.
 tagline: "basic guide on jekyl"
 
