--- a/_data/car-section.yml
+++ b/_data/car-section.yml
@@ -2,3 +2,23 @@
   productcontent: 2004 Subaru WRX STI AWD Low Miles!
   details-url: 
   approved-url: 
+
+  - productimg: 1s.jpg
+  productcontent: 2004 Subaru WRX STI AWD Low Miles!
+  details-url: 
+  approved-url: 
+
+  - productimg: 1s.jpg
+  productcontent: 2004 Subaru WRX STI AWD Low Miles!
+  details-url: 
+  approved-url: 
+
+  - productimg: 1s.jpg
+  productcontent: 2004 Subaru WRX STI AWD Low Miles!
+  details-url: 
+  approved-url: 
+
+  - productimg: 1s.jpg
+  productcontent: 2004 Subaru WRX STI AWD Low Miles!
+  details-url: 
+  approved-url: 
